tests/lit/driver/link-failure.silly
// RUN: %Not %ExeSilly %s -o %t.exe 2>&1 | %FileCheck %s
// CHECK: undefined reference to `addone'
// CHECK: error: Linker failed with exit code:

FUNCTION addone ( INT16 w ) : INT16;

INT16 r1 = CALL addone( 1 ); // 2
